Design: fix chart legend scrollbar

--- a/frontend/src/components/Widgets/GLeanChartWidget/Legend/index.scss
+++ b/frontend/src/components/Widgets/GLeanChartWidget/Legend/index.scss
@@ -1,5 +1,4 @@
 div.legend {
-  margin-left: 20px;
   div.multiselect {
     padding-left: 15px;
   }
